src/objects/Order_Table__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Order Tables</relationshipLabel>
        <relationshipName>Order_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Amount__c</fullName>
        <label>Order Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product_Table__c</referenceTo>
        <relationshipLabel>Order Tables</relationshipLabel>
        <relationshipName>Order_Tables</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Units__c</fullName>
        <label>Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Table</label>
    <nameField>
        <label>Order Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Order Tables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>